# tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  sample.env  start.sh  test_sql_alchemy.ipynb
alembic/: env.py
alembic/versions/: c5b895d7cf74_tracker_app_db_init.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: carrier.py  shipment.py  shipment_status.py
app/core/: config.py  redis_conn.py  weather_api.py
app/crud/: __init__.py  article.py  article_sku.py  base.py  carrier.py  shipment.py  shipment_items.py  shipment_status.py
app/db/: __init__.py  base_class.py  data_populator.py  init_db.py
app/models/: __init__.py  address.py  article.py  article_sku.py  carrier.py  shipment.py  shipment_item.py  shipment_status.py
app/schemas/: __init__.py  address.py  article.py  article_sku.py  carrier.py  request.py  response.py  shipment.py  shipment_item.py  shipment_status.py
tests/: conftest.py
tests/api/api_v1/: test_shipment.py
tests/crud/: test_address.py  test_article.py  test_article_sku.py  test_carrier.py  test_shipment.py  test_shipment_items.py  test_shipment_status.py
tests/utils/: address.py  article.py  carrier.py  common.py  shipment.py  shipment_status.py
