[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["Hariprasad <hariprasadk@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^2.0.2"
pydantic-settings = "^2.0.1"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
httpx = "^0.24.1"
tenacity = "^8.2.2"
python-dotenv = "^1.0.0"
redis = "^4.6.0"
requests = "^2.31.0"
flake8 = "^6.0.0"
faker = "^19.1.0"
sqlalchemy-utils = "^0.41.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
